--- a/translations/fi.json
+++ b/translations/fi.json
@@ -1,7 +1,7 @@
 {
   "species_nearby": {
     "header": "Lähellä olevat lajit",
-    "internet_error": "Tarvitsemme Internettiä lähilajien tuottamiseksi. Napauta yrittääksesi uudelleen.",
+    "internet_error": "Tarvitsemme internetyhteyden lähilajien hakemiseksi. Napauta yrittääksesi uudelleen.",
     "no_location": "Ei sijaintia",
     "no_species": "Näyttää siltä, että lähellä ei ole havaittu monia lajeja! Yritä muuttaa sijaintiasi tai laajentaa lajisuodatinta.",
     "input_location_above_map": "Sijaintia ei löytynyt; syötä sijainnin nimi yläpuolelle ladataksesi kartan ja etsiäksesi lähellä olevia lajeja",
@@ -52,7 +52,7 @@
       "other": "{{count}} havaintoa lähetettäväksi"
     },
     "upload_now": "LÄHETÄ NYT",
-    "error_internet": "Internetiä ei havaittu. Yritä myöhemmin uudelleen.",
+    "error_internet": "Ei internet-yhteyttä. Yritä myöhemmin uudelleen.",
     "error_downtime": {
       "zero": "iNaturalistin palvelimelle tehdään huoltoa. Yritä uudelleen {{count}} tunnin kuluttua.",
       "one": "iNaturalistin palvelimelle tehdään huoltoa. Yritä uudelleen {{count}} tunnin kuluttua.",
@@ -189,7 +189,7 @@
     "completed": "Suoritettu",
     "challenge": "Haaste",
     "badge": "Merkki",
-    "connectivity": "Liitettävyyshaaste",
+    "connectivity": "Yhteyshaaste",
     "biodiversity": "Biodiversiteetti-haaste",
     "productivity": "Yhteisö-haaste",
     "resilience": "Metsät-haaste",
@@ -208,7 +208,7 @@
     "op": "Planeettamme",
     "start_now": "Aloita nyt",
     "mission_1_april": "Löydä 10 uutta lajia!",
-    "april_description": "Emme ole yksin planeetallamme! Villieläimet ovat aina ympärillämme, huomaammepa ne tai ei. Kodeissamme, puutarhoissamme ja kaupungeissamme on löydettävissä piilotettuja maailmoja. Etsi kodissasi ja sen ympäristössä, ja saatat yllättyä siitä, kuinka monta villiä naapuria löydät.\n\nEtsi kasveja, sieniä, ötököitä, lintuja ja eläimiä. Tarkkaile merkkejä hankalammin löydettävästä elämästä - uloste, karvat, pesät, jäljet ja verkot voivat kaikki antaa vihjeitä muista olennoista, jotka jakavat kotisi.",
+    "april_description": "Emme ole yksin planeetallamme! Villieläimiä on kaikkialla ympärillämme, huomaammepa niitä tai emme. Kodeissamme, puutarhoissamme ja kaupungeissamme on löydettävissä piilotettuja maailmoja. Etsi kotonasi ja sen ympäristössä, ja saatat yllättyä siitä, kuinka monta villiä naapuria löydät.\n\nEtsi kasveja, sieniä, ötököitä, lintuja ja eläimiä. Tarkkaile merkkejä hankalammin löydettävästä elämästä – uloste, karvat, pesät, jäljet ja verkot voivat kaikki antaa vihjeitä muista olennoista, jotka jakavat kotisi kanssasi.",
     "start_challenge": "Ota haaste vastaan",
     "open_camera": "Avaa kamera",
     "view_badge": "Näytä merkki",
@@ -237,12 +237,12 @@
     "how_to": "Suorita kuukauden {{month}} Seek-haaste!",
     "released": "Tämä haaste julkaistaan {{date}}.",
     "get_involved": "Osallistu",
-    "action_april": "Tarkista, asuvatko lähellä kaupunkia, joka on osa Kaupunkiluonto-haastetta, ja jos on, niin kiinnitä huomiota villin kaupunkiluonnon tallentamis- ja tunnistamistoimiin!",
+    "action_april": "Tarkista, asutko lähellä kaupunkia, joka on osa City Nature Challenge -haastetta, ja jos on, niin kiinnitä huomiota villin kaupunkiluonnon tallentamis- ja tunnistamistoimiin!",
     "action_may": "Tarjoudu vapaaehtoiseksi paikallisiin ryhmiin, jotka auttavat ylläpitämään paikallisia viheralueita.\n\nJaa havaintojasi perheesi, ystäviesi tai kouluyhteisösi kanssa avataksesi heidän silmänsä ympäröivälle luonnolle.\n\nJärjestä roskienkeräys paikallisella viheralueella.",
     "action_june": "Käytä ourplanet.com-sivustomme resursseja aloittaaksesi paikallisen biologista monimuotoisuutta koskevan toimintaprojektin alueellasi antaaksesi paikalliselle luonnolle auttavan käden.",
     "action_november_2019": "Kerää siemeniä kotoperäisistä puista, idätä ne ruukuissa ja istuta sitten nuoret puut.\n\nKerro ystäville tai perheenjäsenille kaikesta siitä, mitä puut tekevät hyväksemme. ",
     "action_august": "Istuta villikukkia tarjotaksesi ruokaa pölyttäjille.\n\nTee \"ötökkähotelli\" tarjotaksesi koteja hyönteisille puutarhassasi tai koulun pihalla niputtamalla putkenpätkiä yhteen ja täyttämällä jokainen pienillä oksilla ja rikkinäisten laattojen palasilla.",
-    "action_september": "Pidä kirjaa siitä, kuinka paljon vettä käytät päivässä. Mieti, kuinka voisit vähentää tätä vähentääksesi makean veden luontotyyppien rasitusta.\n\nTarkista paikalliset makean veden elinympäristöt roskien tai muun saastumisen varalta. Voisitko käynnistää paikallisen kampanjan tämän arvokkaan ekosysteemin suojelemiseksi?",
+    "action_september": "Pidä kirjaa siitä, kuinka paljon vettä käytät päivässä. Mieti, kuinka voisit vähentää vedenkulutustasi vähentääksesi makean veden luontotyyppien rasitusta.\n\nTarkista paikalliset makean veden elinympäristöt roskien tai muun saastumisen varalta. Voisitko käynnistää paikallisen kampanjan tämän arvokkaan ekosysteemin suojelemiseksi?",
     "action_october": "Linnut tarvitsevat polttoainetta pitkille muuttomatkoille. Jätä talvikuukausina pähkinöitä, siemeniä ja talipalloja puutarhaasi antaaksesi niille vauhtia.\n\nIstuta puita ja pensaita, jotka tarjoavat marjoja ja lepopaikkoja vieraileville linnuille.",
     "action_december": "Etsi tai aloita kansalaistieteellinen projekti, joka seuraa paikallisen fenologian muuttuvia malleja. Tämä tieto voi auttaa tutkijoita ymmärtämään ilmastonmuutoksen vaikutuksia ja ennakoimaan, mitä ongelmia tämä voi aiheuttaa.",
     "june_description": "Jokainen koralliriutan laji on tärkeä muulle luontoyhteisölle riippumatta siitä, onko se muiden olentojen ruokaa vai saalistaja, joka pitää muut populaatiot kurissa. Ruokaketjut voivat olla herkkiä ja monimutkaisia, ja näin on kaikissa planeettamme ekosysteemeissä. Etsi paikallisen elämän verkon eri tasoja ja opi, kuinka kukin mahdollistaa muiden lajien selviytymisen.",
@@ -271,11 +271,12 @@
     "species_observed": "Lajia havaittu",
     "species_nearby": "LAJIT LÄHELLÄ TÄSSÄ HAASTEESSA",
     "no_species_nearby": "Emme löytäneet lähistöllä yhtään lajia tässä haasteessa, jota et ole jo havainnut",
-    "species_nearby_internet_error": "Tarvitsemme internetyhteyden lähistöllä olevien lajien tuottamiseksi."
+    "species_nearby_internet_error": "Tarvitsemme internetyhteyden lähistöllä olevien lajien tuottamiseksi.",
+    "badge_name_my_garden_2022": "PUUTARHANI-MERKKI"
   },
   "results": {
     "observed_species": "Havaitsit uuden lajin!",
-    "learn_more": "Se on lisätty huomioihisi.\nLisätietoja tästä lajista täältä:",
+    "learn_more": "Se on lisätty havaintoihisi.\nLue lisää tästä lajista:",
     "learn_more_no_location": "Opi lisää tästä lajista täältä:",
     "view_species": "Näytä laji",
     "back": "Takaisin kameraan",
@@ -289,8 +290,8 @@
     "order": "Uskomme, että tämä kuuluu lahkoon",
     "class": "Uskomme, että tämä kuuluu luokkaan",
     "resighted": "Havaitsit lajin uudelleen!",
-    "date_observed": "Havaitsit sen ensin:\n{{seenDate}}",
-    "post_inat": "Jos valokuva eliöstä oli ottamasi, voit auttaa Seekiä oppimaan tuntemaan paremmin tämän lajin lähettämällä sen iNaturalistiin, jossa yhteisö auttaa tunnistamaan sen ja parantamaan Seekin tulevia versioita.",
+    "date_observed": "Havaitsit sen ensimmäisen kerran:\n{{seenDate}}",
+    "post_inat": "Jos otit alkuperäisen valokuvan eliöstä, voit auttaa kouluttamaan Seekiä tuntemaan tämän lajin paremmin lähettämällä havainnon iNaturalistiin, jossa yhteisö auttaa tunnistamaan sen ja parantamaan Seekin tulevia versioita.",
     "post": "Lähetä iNaturalistille",
     "flag": "Virhetunnistus",
     "incorrect": "Tunnistettiinko tämä laji väärin?",
@@ -299,10 +300,10 @@
     "no": "Ei, se on oikein",
     "enable_location": "Ota sijainti käyttöön tallentaaksesi havainnot",
     "enable_location_button": "SALLI SIJAINTI",
-    "error_server": "Valitettavasti emme voineet pisteyttää tätä kuvaa. Tarkista Internet-yhteytesi ja yritä uudelleen.",
-    "error_image": "Valitettavasti emme voineet prosessoida tätä kuvaa. Tarkista Internet-yhteytesi ja yritä uudelleen.",
-    "error_species": "Valitettavasti emme voineet hakea tietoja tämän kuvan lajista. Tarkista Internet-yhteytesi ja yritä uudelleen.",
-    "error_location": "Et voi tarkastella levinneisyyskarttoja, tutkia lähistöllä olevia lajeja tai julkaista tätä havaintoa iNaturalistiin. Jos otat sijainnin käyttöön Seekissä, voit tarkastella yksityiskohtaisia tietoja havainnoistasi ja osallistua kansalaistieteeseen. Sijaintiasi ei julkaista, ellet lähetä havaintoa iNaturalistiin.",
+    "error_server": "Valitettavasti emme voineet pisteyttää tätä kuvaa. Tarkista internet-yhteytesi ja yritä uudelleen.",
+    "error_image": "Valitettavasti emme voineet prosessoida tätä kuvaa. Tarkista internet-yhteytesi ja yritä uudelleen.",
+    "error_species": "Valitettavasti emme voineet hakea lajitietoja tälle kuvalle. Tarkista internet-yhteytesi ja yritä uudelleen.",
+    "error_location": "Et voi tarkastella karttoja, tutkia lähistöllä olevia lajeja tai julkaista tätä havaintoa iNaturalistiin. Jos otat sijainnin käyttöön Seekissä, voit tarkastella yksityiskohtaisia tietoja havainnoistasi ja osallistua kansalaistieteeseen. Sijaintiasi ei julkaista, ellet lähetä havaintoa iNaturalistiin.",
     "error_downtime_plural": {
       "zero": "Palvelu tilapäisesti pois käytöstä. Yritä uudelleen {{count}} tunnin kuluttua.",
       "one": "Palvelu tilapäisesti pois käytöstä. Yritä uudelleen {{count}} tunnin kuluttua.",
@@ -312,8 +313,8 @@
       "other": "Palvelu tilapäisesti pois käytöstä. Yritä uudelleen {{count}} tunnin kuluttua."
     },
     "error_few": "muutaman",
-    "error_gps": "Emme löytäneet GPS-sijaintiasi. Yritä siirtyä paikkaan, jossa voit nähdä taivaan, ja tarkista, että laitteesi sijainti on päällä, jotta havainnot voidaan tallentaa.",
-    "error_timeout": "Emme voineet tallentaa havaintoasi sijainnin aikakatkaisun vuoksi. Yritä uudelleen myöhemmin.",
+    "error_gps": "Emme löytäneet GPS-sijaintiasi. Havaintosi on tallennettu, mutta ilman sijaintia et voi tarkastella yksityiskohtaisia tietoja, kuten alueen karttoja. Yritä siirtyä paikkaan, jossa voit nähdä taivaan ja tarkista, että laitteesi sijaintipalvelut ovat päällä.",
+    "error_timeout": "Sijaintisi hakeminen kesti liian kauan. Havaintosi on tallennettu, mutta ilman sijaintia et voi tarkastella yksityiskohtaisia tietoja, kuten karttoja. Yritä myöhemmin uudelleen.",
     "nearby": "Lajeja lähellä tätä eliöryhmää",
     "nothing_nearby": "Näyttää siltä, että lähellä tätä eliöryhmää ei ole havaittu monia lajeja! Yritä ottaa toinen valokuva tai lähettää se iNaturalistille.",
     "tap": "Napauta ladataksesi lähellä olevia lajeja",
@@ -350,7 +351,7 @@
     "genus": "suku",
     "species": "laji",
     "error_permissions": "Tarvitsemme pääsyn kameraan auttaaksemme sinua tunnistamaan lajeja!",
-    "error_gallery": "Tarvitsemme pääsyn filmirullaasi tallentaaksemme ottamasi valokuvat!",
+    "error_gallery": "Tarvitsemme pääsyn kuvagalleriaasi tallentaaksemme ottamasi valokuvat!",
     "permissions": "Ota käyttöoikeudet käyttöön asetuksissa",
     "please_permissions": "Ota käyttöoikeudet käyttöön asetuksissa",
     "error_classifier": "Luokittelijan lataaminen valitettavasti epäonnistui",
@@ -364,7 +365,7 @@
     "error_selected_photos": "Jos käyttöoikeutesi on asetettu 'Valitut kuvat', saatat joutua käynnistämään Seekin uudelleen tai vieraile iOS Asetukset > Seek > Kuvat > Valitut Kuvat valitaksesi mitkä kuvat näytetään tässä.",
     "plant_filter": "Vain kasvit",
     "non_plant_filter": "Muut kuin kasvit",
-    "filters_off": "Suodattimet pois"
+    "filters_off": "Ei rajauksia"
   },
   "gallery": {
     "label": "Kuvat",
@@ -375,7 +376,7 @@
     "header": "Tavoitteesi",
     "explanation_1": "Jokainen piste Seek-kamerassa edustaa taksonomista tasoa pääryhmästä lajeihin. Tämän järjestelmän avulla tutkijat luokittelevat eläviä.",
     "explanation_2": "Osoita kameralla eläviä asioita ympärilläsi ja ota kuva, kun mittari yltää lajitasolle asti.",
-    "header_1": "Kuinka se toimii?",
+    "header_1": "Miten se toimii?",
     "how_works": "Seekin tunnistusmalli toimii suoraan käyttäen elämän puuta.\n\nJokainen piste tunnistuspalkissa edustaa taksonomista tasoa elämän puussa. Kun Seek pystyy varmasti tunnistamaan havaitsemasi lajin uudella tasolla, se lisää uuden pisteen palkkiin. Kun eliö on tunnistettu lajiin asti, ota valokuva!",
     "header_2": "Vinkkejä ja niksejä",
     "tips": "Seek tunnistaa parhaiten valokuvia, joissa on hyvä valaistus ja selkeä otos lajista, joten kokeile erilaisia kulmia, kunnes saat hyvän kuvan.\n\nSeek oppii yhä, joten jos pisteet eivät näytä täyttyvän koko matkalta, olet todennäköisesti tutkimassa eliötä, jota ei yleisesti löydy iNaturalistin tietokannasta. Voit lähettää havainnot iNaturalistille auttaaksesi Seekiä tunnistamaan näitä paremmin!",
@@ -402,7 +403,7 @@
   },
   "badges": {
     "your_level": "Sinun tasosi",
-    "login": "Kirjaudu sisään käyttämällä iNaturalist-tiliä, jotta voit lähettää havaintoja online-yhteisöön!",
+    "login": "Kirjaudu sisään käyttämällä iNaturalist-tiliä, jotta voit lähettää havaintoja verkkoyhteisöön!",
     "achievements": "Saavutukset",
     "observe_plural": {
       "zero": "Havainnoi {{count}} lajia päästäksesi seuraavalle tasolle!",
@@ -504,9 +505,9 @@
   "species_detail": {
     "near": "Lähistöllä",
     "about": "Tietoja",
-    "range_map": "Aluekartta",
+    "range_map": "Kartta",
     "range_about": "Kartta tämän lajin havainnoista iNaturalistissa.",
-    "view_map": "Näytä aluekartta",
+    "view_map": "Näytä kartta",
     "legend": "Selite",
     "current_location": "Nykyinen sijainti",
     "obs": "Omat Seek-havaintoni",
@@ -592,7 +593,7 @@
   },
   "posting_status": {
     "posting_to_inat_background": "LÄHETTÄÄ INATURALISTIIN TAUSTALLA",
-    "posting_to_inat_background_description": "Lähettäminen iNaturalistiin jatkuu taustalla, kun Seek on auki.\n\nVoit tarkistaa latausten tilan aloitusnäytöllä.",
+    "posting_to_inat_background_description": "Havainnon lähettäminen iNaturalistiin jatkuu taustalla, kun Seek on auki.\n\nVoit tarkistaa latausten tilan aloitusnäytöllä.",
     "no_internet": "EI INTERNET-YHTEYTTÄ!",
     "no_internet_description": "Havaintoasi ei ole ladattu iNaturalistiin, koska et ole yhteydessä internetiin.\n\nVoit ladata havainnon aloitusnäytöstä, kun sinulla on internet."
   },
@@ -609,7 +610,7 @@
     "yes_header": "Kyllä: ",
     "no_header": "Ei: ",
     "open": "Muut iNaturalist-sivuston käyttäjät näkevät missä tämä laji havaittiin, ja tutkijat voivat käyttää tätä tietoa tutkimukseen.",
-    "obscured": "Tämän havainnon tarkka sijainti piilotetaan muilta iNaturalist-käyttäjiltä, ja sen sijaan se laajennetaan suuremmalle alueelle. (Kaikkien vaarantuneiden ja uhanalaisten lajien sijainnit hämärretään automaattisesti)",
+    "obscured": "Tämän havainnon tarkka sijainti piilotetaan muilta iNaturalist-käyttäjiltä, ja sen sijaan se laajennetaan suuremmalle alueelle. (Kaikkien vaarantuneiden ja uhanalaisten lajien sijainnit karkeistetaan automaattisesti)",
     "closed": "Tämän havainnon sijaintia ei jaeta muille iNaturalist-käyttäjille.",
     "captive": "Tarhattu/viljelty?",
     "no": "Tämä on luonnossa luonnossa esiintyvä eliö, jota ihmiset eivät ole tuoneet tälle alueelle. ",
@@ -684,7 +685,7 @@
     "action_april_2020": "Huhtikuu on kansalaistiede-kuukausi! Voit osallistua biologisen monimuotoisuuden tieteelliseen ymmärtämiseen kansalaistutkijana lähettämällä Seek-havaintoihisi iNaturalistille.\n\nJos olet vähintään 13-vuotias (tai vanhempien luvalla), voit luoda iNaturalist-tilin ja lähettää havaintoja iNaturalistille jakaaksesi havaintosi laajemmalle yhteisölle, tutkijat mukaan lukien!",
     "backyard": "Takapiha-haaste",
     "may_2020_description": "Sinun ei tarvitse mennä kauas löytääksesi luontoa ympärilläsi. Jopa vain takapihallasi tai naapurustossasi voit löytää kasveja, lintuja ja hyönteisiä, jotka jakavat tilan kanssasi. ",
-    "action_may_2020": "Käytä Seekin Lähellä olevat lajit -ominaisuutta oppiaksesi kaiken linnuista, kasveista ja hyönteisistä, joita on havaittu lähistöllä ja tarkista niiden lajisivut. Mihin vuodenaikaan niitä havaitaan eniten? Kokeile sitten tutkia jotain uutta, mitä lajeja voisi löytää lähellä Kairoa, Pariisia tai Jakartaa?",
+    "action_may_2020": "Käytä Seekin Lähellä olevat lajit -ominaisuutta oppiaksesi kaiken linnuista, kasveista ja hyönteisistä, joita on havaittu lähistöllä ja tarkista niiden lajisivut. Mihin vuodenaikaan niitä havaitaan eniten? Kokeile sitten tutkia jotain uutta: mitä lajeja voisi löytää lähellä Kairoa, Pariisia tai Jakartaa?",
     "mission_1_may_2020": "Etsi 5 kasvia",
     "mission_2_may_2020": "Etsi 2 hyönteistä",
     "mission_3_may_2020": "Etsi 1 hämähäkkieläin",
@@ -749,8 +750,8 @@
     "options": "Valinnat",
     "show_species_id": "Näytä lajin tunnistus",
     "share": "Jaa Facebookiin",
-    "save_to_photo_library": "Tallenna kuvakirjastoon",
-    "saved_to_photo_library": "Tallennettu kuvakirjastoon",
+    "save_to_photo_library": "Tallenna kuvagalleriaan",
+    "saved_to_photo_library": "Tallennettu kuvagalleriaan",
     "back_to_id": "Takaisin tunnistukseen",
     "error_title": "Kuvan tallentaminen epäonnistui",
     "error": "Ole hyvä ja tarkista, että Facebook-sovellus on asennettu.",
@@ -879,6 +880,15 @@
     "april_2022_challenge_name_wildflower": "Luonnonkukat-haaste",
     "april_2022_mission_1": "Etsi 10 lajia kukkivia kasveja (alajakso Angiospermae)",
     "april_2022_description_many_flowers_have_colors_shapes": "Useilla kukilla on värejä ja muotoja, jotka houkuttelevat hyönteisiä vierailulle kukkiin. Kukat tuottavat siitepölyä, jota voidaan siirtää kukasta toiseen eläinten, tuulen, tai veden avulla.",
-    "april_2022_action_pollen_visible_anther": "Toisinaan siitepölyä on näkyvissä kukan ponnella. Jos kosketat sormellasi sitä, näetkö siitepölyä sormellasi? Minkä luulet pölyttävän tätä lajia?"
+    "april_2022_action_pollen_visible_anther": "Toisinaan siitepölyä on näkyvissä kukan ponnella. Jos kosketat sormellasi sitä, näetkö siitepölyä sormellasi? Minkä luulet pölyttävän tätä lajia?",
+    "may_2022_challenge_name_bee": "Mehiläishaaste",
+    "may_2022_mission_1": "Etsi 3 lajia mehiläisiä (Anthophila)",
+    "may_2022_description_not_all_bees_make_honey": "Tiesitkö, etteivät kaikki mehiläiset tee hunajaa eivätkä elä kennoissa? Useimmat mehiläiset elävät yksin, mutta ne ovat silti välttämättömiä kukkien ja puiden pölyttäjiä. Jos pysyt rauhallisena ja annat tilaa, kun ne käyvät kukissa, mehiläisten ei pitäisi vaivata sinua.",
+    "may_2022_action_see_bees": "Näe mehiläiset uusin silmin uudessa PBS:n luontoelokuvassa My Garden of a Thousand Bees. Ja istuta itse villikukkia nähdäksesi, mitä pölyttäjiä ne houkuttelevat. #PlantWildflowers",
+    "june_2022_challenge_name_wildflower": "Pölyttäjähaaste",
+    "june_2022_mission_1": "Kaksi lajia kukkivia kasveja (alajakso Angiospermae)",
+    "june_2022_mission_2": "Kaksi lajia seuraavista:\n\n-lahko Coleoptera (kovakuoriaiset);\n-lahko Diptera (kärpäset);\n-lahko Lepidoptera (perhoset)\n-Anthophila (mehiläiset)",
+    "june_2022_description_most_fruits_and_seeds": "Useimmat hedelmät ja siemenet, jotka huomaat luonnossa ovat seurausta onnistuneesta pölytyksestä. Mehiläiset eivät ole ainoita hyönteisiä, jotka toimivat pölyttäjinä! Pölytyksen jälkeen kukasta kehittyy hedelmä, joka sisältää siemeniä. Näitkö kasveja, joissa olisi kehittymässä hedelmiä?",
+    "june_2022_action_busy_pollinators": "Kiireiset pölyttäjät kuten mehiläiset ja muut hyönteiset pitävät paikallisen kasvipopulaatiomme terveenä ja monimuotoisena. Opi lisää mehiläisten salaisista elämistä katsomalla uusi elokuva My Garden of a Thousand Bees PBS Nature-palvelussa. Ja istuta itse villikukkia nähdäksesi, mitä pölyttäjiä ne houkuttelevat. #PlantWildflowers"
   }
 }
